hyrax_tests/errors/IncompatibleMediaType.w10n
url = http://localhost:8080/opendap/w10n/data/nc/fnoc1.nc/u%5B%5D%?output=ascii
-s 
